mutating to modules